--- a/rag_chatbot_V1.ipynb
+++ b/rag_chatbot_V1.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNWY7p/rzRrSZmTAL3ENfW6",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/LeonardoLuca/AskYou/blob/main/rag_chatbot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Teste conexão Gemini\n"
-      ],
       "metadata": {
         "id": "Hh8uXjXxbQFF"
-      }
+      },
+      "source": [
+        "# Teste conexão Gemini\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -51,13 +34,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "B-PfPlKnggFJ"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "06Lg-QRmL67q"
+      },
+      "outputs": [],
       "source": [
         "# Célula 2: Importar bibliotecas e configurar a API Key do Google\n",
         "import os\n",
@@ -91,15 +79,15 @@
         "# Embora estejamos passando diretamente, é bom garantir que não haja conflito.\n",
         "if 'GOOGLE_API_KEY' in os.environ:\n",
         "    del os.environ['GOOGLE_API_KEY']"
-      ],
-      "metadata": {
-        "id": "06Lg-QRmL67q"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "w_sy9Z4FNLwn"
+      },
+      "outputs": [],
       "source": [
         "# Célula 3: Instanciar o modelo Gemini (só executa se a chave foi carregada)\n",
         "\n",
@@ -119,15 +107,15 @@
         "        chat = None # Garante que chat é None se a instanciação falhar\n",
         "else:\n",
         "    print(\"\\nInstanciação do modelo pulada pois a chave de API não foi configurada.\", file=sys.stderr)"
-      ],
-      "metadata": {
-        "id": "w_sy9Z4FNLwn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tQ6-pvMpMS-H"
+      },
+      "outputs": [],
       "source": [
         "# Célula 4: Definir as mensagens (geralmente sem alterações)\n",
         "from langchain_core.messages import SystemMessage, HumanMessage, AIMessage\n",
@@ -140,15 +128,15 @@
         "]\n",
         "\n",
         "print(\"Lista de mensagens definida.\")"
-      ],
-      "metadata": {
-        "id": "tQ6-pvMpMS-H"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0sT-kwz8Nnwv"
+      },
+      "outputs": [],
       "source": [
         "# Célula 5: Invocar o modelo e obter a resposta (com verificação)\n",
         "\n",
@@ -167,15 +155,16 @@
         "# Exibe o objeto de resposta completo (opcional, útil para debug)\n",
         "# print(\"\\nObjeto de resposta completo:\")\n",
         "# print(res)"
-      ],
-      "metadata": {
-        "id": "0sT-kwz8Nnwv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "2rXuQw_fSww3"
+      },
+      "outputs": [],
       "source": [
         "# Célula 6: Imprimir o conteúdo da resposta (com verificação)\n",
         "\n",
@@ -187,88 +176,87 @@
         "     print(\"\\nNão foi possível obter uma resposta do modelo (verifique o erro na Célula 5).\", file=sys.stderr)\n",
         "else:\n",
         "     print(\"\\nNão há resposta para exibir pois o modelo não foi instanciado.\", file=sys.stderr)"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "2rXuQw_fSww3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "messages.append(res)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yJBa5ozzaMPy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "messages.append(res)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "messages"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "lgQckagFaas8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "messages"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JqVSNLfVaj8s"
+      },
+      "outputs": [],
       "source": [
         "prompt = HumanMessage (\n",
         "    content=\"Qual a diferença entre supervisionado e não supervisionado?\"\n",
         "    )\n",
         "messages.append(prompt)"
-      ],
-      "metadata": {
-        "id": "JqVSNLfVaj8s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "res = chat.invoke(messages)\n",
-        "print(res.content)"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "PaY-r35pbBNS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "res = chat.invoke(messages)\n",
+        "print(res.content)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# RAG"
-      ],
       "metadata": {
         "id": "83g6EmaEbIBA"
-      }
+      },
+      "source": [
+        "# RAG"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cbBqHD05beJD"
+      },
+      "outputs": [],
       "source": [
         "#Conectando com o google drive\n",
         "from google.colab import drive\n",
         "drive.mount(\"/content/drive\", force_remount=True)"
-      ],
-      "metadata": {
-        "id": "cbBqHD05beJD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7gdVk5BhciWZ"
+      },
+      "outputs": [],
       "source": [
         "#Importando o dataset do drive\n",
         "import json\n",
@@ -282,28 +270,29 @@
         "\n",
         "# Display the first entry to verify\n",
         "print(dataset[0])"
-      ],
-      "metadata": {
-        "id": "7gdVk5BhciWZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Bibliotecas para embedding\n",
-        "!pip install -q sentence-transformers faiss-cpu transformers torch"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "ON5EsX1RgjqN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Bibliotecas para embedding\n",
+        "!pip install -q sentence-transformers faiss-cpu transformers torch"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "mnTiVrlPhRMk"
+      },
+      "outputs": [],
       "source": [
         "from sentence_transformers import SentenceTransformer\n",
         "import numpy as np\n",
@@ -319,29 +308,28 @@
         "\n",
         "# Convert to numpy array for FAISS\n",
         "embeddings = np.array(embeddings)"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "mnTiVrlPhRMk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(descriptions[0])\n",
-        "print(embeddings)"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "hvCpjZmIi9rn"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(descriptions[0])\n",
+        "print(embeddings)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EET0zQ12jgZ0"
+      },
+      "outputs": [],
       "source": [
         "import faiss\n",
         "\n",
@@ -354,38 +342,51 @@
         "\n",
         "# Save the index (optional)\n",
         "faiss.write_index(index, '/content/drive/My Drive/Colab Notebooks/index/faiss-cv-leonardo-index.bin')"
-      ],
-      "metadata": {
-        "id": "EET0zQ12jgZ0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "Eu2mmqRplIEs"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Load a Generative Model\n",
-        "from transformers import pipeline\n",
-        "\n",
-        "# Load a generative model\n",
-        "generator = pipeline('text-generation', model='distilgpt2')"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "b-Xw50xOmCKO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'transformers'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Load a Generative Model\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pipeline\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Load a generative model. Utilizando modelo do chat gpt, que não estava comaptivel com o primeiro exemplo.\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#f\u001b[39;00m\n\u001b[32m      6\u001b[39m generator = pipeline(\u001b[33m'\u001b[39m\u001b[33mtext-generation\u001b[39m\u001b[33m'\u001b[39m, model=\u001b[33m'\u001b[39m\u001b[33mdistilgpt2\u001b[39m\u001b[33m'\u001b[39m)\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
+          ]
+        }
+      ],
+      "source": [
+        "#Load a Generative Model\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "# Load a generative model. Utilizando modelo do chat gpt, que não estava comaptivel com o primeiro exemplo.\n",
+        "#Foi necessário alterar o código para integrar com o exemplo do GEMINI\n",
+        "generator = pipeline('text-generation', model='distilgpt2')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9D7s1FiApCDI"
+      },
+      "outputs": [],
       "source": [
         "#Implement the RAG Pipeline\n",
         "\n",
@@ -413,12 +414,33 @@
         "response, retrieved = rag_query(query)\n",
         "print(\"Respostas:\", response)\n",
         "print(\"Retrieved Entries:\", retrieved)"
-      ],
-      "metadata": {
-        "id": "9D7s1FiApCDI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNWY7p/rzRrSZmTAL3ENfW6",
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
