Ajustando o data para receber descriptions e categories do Json

--- a/rag_chatbot_V2.ipynb
+++ b/rag_chatbot_V2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8JzWK9lP4rYRj/KJCYrBU",
+      "authorship_tag": "ABX9TyPZpUX2vwRP1jnqXsJ2ycM2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "collapsed": true,
         "id": "KZFMCJ_yKkTZ"
       },
       "outputs": [],
@@ -94,10 +93,22 @@
         "    del os.environ['GOOGLE_API_KEY']"
       ],
       "metadata": {
-        "id": "06Lg-QRmL67q"
+        "id": "06Lg-QRmL67q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d1276bbc-b2bc-4fa0-dd24-dd37044374db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chave de API do Google carregada com sucesso!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -110,9 +121,9 @@
         "    try:\n",
         "        # Use o modelo Gemini desejado (Pro ou Flash)\n",
         "        chat_model = ChatGoogleGenerativeAI(\n",
-        "            model=\"gemini-2.0-pro-latest\", # Ou \"gemini-1.5-flash-latest\" para mais rápido/barato\n",
+        "            model=\"gemini-2.0-flash-001\", # Ou \"gemini-1.5-flash-latest\" para mais rápido/barato\n",
         "            google_api_key=GOOGLE_API_KEY,\n",
-        "            temperature=0.2, # Reduz a criatividade para respostas mais factuais Variabilidade\n",
+        "            temperature=0.4, # Reduz a criatividade para respostas mais factuais Variabilidade\n",
         "            # safety_settings=... # Adicione configurações de segurança se necessário\n",
         "        )\n",
         "        print(f\"Modelo Gemini '{chat_model.model}' instanciado com sucesso.\")\n",
@@ -133,10 +144,24 @@
         "    print(f\"ERRO ao carregar o modelo de embedding: {e}\", file=sys.stderr)"
       ],
       "metadata": {
-        "id": "w_sy9Z4FNLwn"
+        "id": "w_sy9Z4FNLwn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0f2dc682-162d-4a63-ef48-0952bf566c72"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Modelo Gemini 'models/gemini-2.0-flash-001' instanciado com sucesso.\n",
+            "Carregando modelo de embedding (SentenceTransformer)...\n",
+            "Modelo de embedding carregado em 1.21 segundos.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -164,6 +189,7 @@
         "# (Como estava antes)\n",
         "cv_data = None\n",
         "cv_descriptions = None\n",
+        "cv_categories = None\n",
         "faiss_index = None\n",
         "\n",
         "# --- Carrega o Dataset (CV JSON) ---\n",
@@ -174,7 +200,8 @@
         "            cv_data = json.load(f)\n",
         "        print(f\"Dataset CV carregado de: {CV_JSON_PATH}\")\n",
         "        cv_descriptions = [entry.get('Description', '') for entry in cv_data]\n",
-        "        print(f\"Extraídas {len(cv_descriptions)} descrições do CV.\")\n",
+        "        cv_categories = [entry.get('Category', '') for entry in cv_data]\n",
+        "        print(f\"Extraídas {len(cv_descriptions)} descrições do CV. \\n Extraídas {len(cv_categories)} categorias do CV.\")\n",
         "        if not cv_descriptions:\n",
         "             print(\"AVISO: Nenhuma descrição encontrada no arquivo JSON.\", file=sys.stderr)\n",
         "             cv_data = None\n",
@@ -197,7 +224,7 @@
         "            if faiss_index.d != embedder_model.get_sentence_embedding_dimension():\n",
         "                 print(f\"AVISO: Dimensão do índice ({faiss_index.d}) diferente. Recriando.\", file=sys.stderr)\n",
         "                 faiss_index = None\n",
-        "            elif faiss_index.ntotal != len(cv_descriptions):\n",
+        "            elif faiss_index.ntotal != len(cv_descriptions) and len(cv_descriptions):\n",
         "                 print(f\"AVISO: Número de vetores ({faiss_index.ntotal}) diferente. Recriando.\", file=sys.stderr)\n",
         "                 faiss_index = None\n",
         "            else:\n",
@@ -242,10 +269,28 @@
         "     print(\"AVISO: Processo de indexação pulado (dados do CV não carregados).\", file=sys.stderr)"
       ],
       "metadata": {
-        "id": "tQ6-pvMpMS-H"
+        "id": "tQ6-pvMpMS-H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d22c8f6a-946f-4e2c-de9e-443f90ffa8b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Google Drive montado com sucesso em /content/drive.\n",
+            "Dataset CV carregado de: /content/drive/My Drive/Colab Notebooks/datasets/dataset-cv-leonardo.json\n",
+            "Extraídas 27 descrições do CV. \n",
+            " Extraídas 27 descrições do CV.\n",
+            "Tentando carregar índice FAISS existente (IP) de: /content/drive/My Drive/Colab Notebooks/index/faiss-cv-leonardo-index-IP.bin\n",
+            "Índice FAISS (IP) carregado com sucesso (27 vetores).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -399,7 +444,7 @@
       "metadata": {
         "id": "0sT-kwz8Nnwv"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -447,10 +492,74 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "2rXuQw_fSww3"
+        "id": "2rXuQw_fSww3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "47dfa6bf-ddf6-4442-c424-d83581c5ed76"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "===================================\n",
+            " Assistente de Análise de CV pronto! \n",
+            "===================================\n",
+            "Digite sua pergunta sobre o currículo carregado ou 'sair' para terminar.\n",
+            "\n",
+            "Sua pergunta: algo sobre react?\n",
+            "\n",
+            "[RAG] Processando consulta: 'algo sobre react?'\n",
+            "[RAG] Consulta codificada e normalizada em 0.026 seg.\n",
+            "[RAG] Busca FAISS concluída em 0.000 seg. Encontrados 4 vizinhos.\n",
+            "\n",
+            "  [DEBUG] Recuperado Doc Índice: 11, Similaridade: 0.3139\n",
+            "  [DEBUG] Categoria: Certifications, Sub: Certification\n",
+            "  [DEBUG] Descrição: Inicio do projeto: Como começar um projeto bem-sucedido...\n",
+            "    -> Documento 11 DESCARTADO (Similaridade 0.3139 < 0.45)\n",
+            "\n",
+            "  [DEBUG] Recuperado Doc Índice: 5, Similaridade: 0.3105\n",
+            "  [DEBUG] Categoria: Languages, Sub: Language Proficiency\n",
+            "  [DEBUG] Descrição: Spanish (Limited Working)...\n",
+            "    -> Documento 5 DESCARTADO (Similaridade 0.3105 < 0.45)\n",
+            "\n",
+            "  [DEBUG] Recuperado Doc Índice: 8, Similaridade: 0.2916\n",
+            "  [DEBUG] Categoria: Certifications, Sub: Certification\n",
+            "  [DEBUG] Descrição: Treinamento LGPD...\n",
+            "    -> Documento 8 DESCARTADO (Similaridade 0.2916 < 0.45)\n",
+            "\n",
+            "  [DEBUG] Recuperado Doc Índice: 2, Similaridade: 0.2563\n",
+            "  [DEBUG] Categoria: Skills, Sub: Technical\n",
+            "  [DEBUG] Descrição: React.js...\n",
+            "    -> Documento 2 DESCARTADO (Similaridade 0.2563 < 0.45)\n",
+            "[RAG] Nenhum documento relevante encontrado (ou todos abaixo do threshold) no CV para esta consulta.\n",
+            "\n",
+            "--------------------\n",
+            "Resposta do Assistente:\n",
+            "Não encontrei informações altamente relevantes (acima do limiar de 45% de similaridade) para isso no CV. A seção mais próxima encontrada (similaridade 0.31) foi sobre: 'Inicio do projeto: Como começar um projeto bem-sucedido...', mas pode não ser o que você procura.\n",
+            "--------------------\n",
+            "--------------------\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-b44bdaa92367>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0muser_query\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nSua pergunta: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0muser_query\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'sair'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Encerrando o assistente. Até logo!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
     }
   ]
 }
